UPDATE: Fix disabled text visibility

--- a/src/styles/clubs.theme.scss
+++ b/src/styles/clubs.theme.scss
@@ -33,7 +33,6 @@ $button-theme: (
 	fill: 'accent-600',
 	fill-hover: 'accent-200',
 	fill-active: 'accent-200',
-	fill-disabled: 'accent-400',
 );
 
 $form-field-theme: (
